NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/btmcrtsg.cla
version https://git-lfs.github.com/spec/v1
oid sha256:ec042c557b7812ca4be1888d8e4f7aea861d628be7c4eabf7325743b40338e16
size 5670
